should save and delete from favourite songs